[gd_scene load_steps=13 format=3 uid="uid://ddci254t1xqa0"]

[ext_resource type="Script" path="res://Escenarios/Nivel/Nivel tutorial/nivel_1.gd" id="1_p3bxv"]
[ext_resource type="Texture2D" uid="uid://daj13yjstrpby" path="res://Sprites/Bordes/bordes.png" id="2_j0va0"]
[ext_resource type="Texture2D" uid="uid://bubbmfial5ogu" path="res://icon.svg" id="2_y6cwt"]
[ext_resource type="Texture2D" uid="uid://bejyuhtwc4qwn" path="res://Sprites/Bordes/Sin título.png" id="4_8grnu"]
[ext_resource type="AudioStream" uid="uid://b7pcpw34gwj5e" path="res://Sonidos/cute-level-up-3-189853 1.mp3" id="5_q62d4"]
[ext_resource type="AudioStream" uid="uid://bjjyrna2w3ee8" path="res://Sonidos/GAME OVER.mp3" id="6_138qn"]
[ext_resource type="AudioStream" uid="uid://8rv8c4mh8k4k" path="res://Sonidos/1SPACE MELODY 1.mp3" id="7_rg2or"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oindj"]
size = Vector2(1333, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bhn8h"]
size = Vector2(1325, 34.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v166a"]
size = Vector2(44, 705)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0b8cs"]
size = Vector2(20, 745)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6oncj"]
size = Vector2(129, 110)

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_p3bxv")

[node name="BordesSpawn" type="Node2D" parent="."]

[node name="BordeArriba" type="Node2D" parent="BordesSpawn"]
position = Vector2(183, -1)

[node name="A" type="Marker2D" parent="BordesSpawn/BordeArriba"]

[node name="B" type="Marker2D" parent="BordesSpawn/BordeArriba"]
position = Vector2(912, 0)

[node name="BordeAbajo" type="Node2D" parent="BordesSpawn"]
position = Vector2(377, 717)

[node name="A" type="Marker2D" parent="BordesSpawn/BordeAbajo"]

[node name="B" type="Marker2D" parent="BordesSpawn/BordeAbajo"]
position = Vector2(766, 0)

[node name="BordeIzquierdo" type="Node2D" parent="BordesSpawn"]
position = Vector2(-8, 133)

[node name="A" type="Marker2D" parent="BordesSpawn/BordeIzquierdo"]

[node name="B" type="Marker2D" parent="BordesSpawn/BordeIzquierdo"]
position = Vector2(0, 439)

[node name="BordeDerecho" type="Node2D" parent="BordesSpawn"]
position = Vector2(1287, 155)

[node name="A" type="Marker2D" parent="BordesSpawn/BordeDerecho"]

[node name="B" type="Marker2D" parent="BordesSpawn/BordeDerecho"]
position = Vector2(0, 428)

[node name="Objetos" type="Node2D" parent="BordesSpawn"]
position = Vector2(-108, 31)

[node name="BordeArriba" type="Area2D" parent="." groups=["BordeArriba"]]
position = Vector2(-9, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordeArriba"]
position = Vector2(640, -3)
shape = SubResource("RectangleShape2D_oindj")

[node name="Bordes" type="Sprite2D" parent="BordeArriba"]
position = Vector2(633.75, -10)
scale = Vector2(5.14706, 0.0645161)
texture = ExtResource("2_j0va0")

[node name="BordeAbajo" type="Area2D" parent="." groups=["BordeAbajo"]]
position = Vector2(-5, 725)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordeAbajo"]
position = Vector2(623.5, 2.75)
shape = SubResource("RectangleShape2D_bhn8h")

[node name="Bordes" type="Sprite2D" parent="BordeAbajo"]
position = Vector2(621.25, 4)
scale = Vector2(5.13529, 0.112903)
texture = ExtResource("2_j0va0")

[node name="BordeIzquierdo" type="Area2D" parent="." groups=["BordeIzquierdo"]]
position = Vector2(-2, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordeIzquierdo"]
position = Vector2(-10, 347)
shape = SubResource("RectangleShape2D_v166a")

[node name="Bordes" type="Sprite2D" parent="BordeIzquierdo"]
position = Vector2(-10.5, 345)
scale = Vector2(0.129412, 2.87903)
texture = ExtResource("2_j0va0")

[node name="BordeDrecho" type="Area2D" parent="." groups=["BordeDerecho"]]
position = Vector2(1281, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordeDrecho"]
position = Vector2(2, 363.5)
shape = SubResource("RectangleShape2D_0b8cs")

[node name="Bordes" type="Sprite2D" parent="BordeDrecho"]
position = Vector2(5.25, 357)
scale = Vector2(0.0686275, 2.91935)
texture = ExtResource("2_j0va0")

[node name="Salida" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Salida"]
position = Vector2(159.5, 673)
shape = SubResource("RectangleShape2D_6oncj")

[node name="Icon" type="Sprite2D" parent="Salida"]
position = Vector2(159, 684)
texture = ExtResource("2_y6cwt")

[node name="SinTítulo" type="Sprite2D" parent="."]
position = Vector2(1162, 654)
texture = ExtResource("4_8grnu")

[node name="victoria" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 582.0
offset_top = 364.0
offset_right = 622.0
offset_bottom = 404.0

[node name="MarginContainer" type="MarginContainer" parent="victoria"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0

[node name="TextureRect" type="TextureRect" parent="victoria/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_y6cwt")

[node name="TextureButton" type="TextureButton" parent="victoria/MarginContainer"]
layout_mode = 2

[node name="Sonido de victoria" type="AudioStreamPlayer2D" parent="victoria"]
stream = ExtResource("5_q62d4")

[node name="Game Over" type="AudioStreamPlayer2D" parent="."]
position = Vector2(582, 364)
stream = ExtResource("6_138qn")

[node name="Musica de fondo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_rg2or")

[connection signal="area_entered" from="Salida" to="." method="_on_salida_area_entered"]
